<resources>
    <string name="app_name">SecondHomeTask</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="enter_a_text">Enter a text</string>
    <string name="send">Send</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="this_is_a_host_fragment">This is a Host Fragment</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="created_by_oleksandr_vasilistov">This awesome APP was created by Oleksandr Vasilistov in 2021.</string>
    <string name="ok">Ok</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>